@@ -68,7 +68,6 @@ import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.net.URLDecoder;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -360,7 +359,7 @@ public class XIncludeFilter implements Receiver {
                 // XQuery context.
                 if (scheme == null && moduleLoadPath != null) {
                     final String path = externalUri.getSchemeSpecificPart();
-                    Path f = Paths.get(path);
+                    Path f = Path.of(path);
                     if (!f.isAbsolute()) {
                         if (moduleLoadPath.startsWith(XmldbURI.XMLDB_URI_PREFIX)) {
                             final XmldbURI parentUri = XmldbURI.create(moduleLoadPath);
@@ -370,7 +369,7 @@ public class XIncludeFilter implements Receiver {
                                 throw new PermissionDeniedException("Permission denied to read XInclude'd resource");
                             }
                         } else {
-                            f = Paths.get(moduleLoadPath, path);
+                            f = Path.of(moduleLoadPath, path);
                             externalUri = f.toUri();
                         }
                     }
