@@ -28,7 +28,6 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.Test;
 
@@ -40,7 +39,7 @@ public class XMLUtilTest {
 	@Test
 	public void testGetXMLDeclWithUTF8() throws IOException, URISyntaxException {
 		final URL testFileUrl = getClass().getResource(utf8TestFileName);
-		final Path testFile = Paths.get(testFileUrl.toURI());
+		final Path testFile = Path.of(testFileUrl.toURI());
 
 		final String expectedDecl = "<?xml version=\"1.0\"?>";
 		final String decl = XMLUtil.getXMLDecl(Files.readAllBytes(testFile));
@@ -50,7 +49,7 @@ public class XMLUtilTest {
 	@Test
 	public void testGetXMLDeclWithUTF16() throws IOException, URISyntaxException {
 		final URL testFileUrl = getClass().getResource(utf16TestFileName);
-		final Path testFile = Paths.get(testFileUrl.toURI());
+		final Path testFile = Path.of(testFileUrl.toURI());
 
 		final String expectedDecl = "<?xml version=\"1.0\" encoding=\"UTF-16\" standalone=\"no\"?>";
 		final String decl = XMLUtil.getXMLDecl(Files.readAllBytes(testFile));
